@@ -1,0 +1,24 @@
+package at.nullpointer.trayrss.monitor;
+
+import at.nullpointer.trayrss.configuration.feeds.db.Feed;
+import at.nullpointer.trayrss.configuration.feeds.db.News;
+
+public class Notification {
+	Feed feed;
+	News news;
+	public Feed getFeed() {
+		return feed;
+	}
+	public void setFeed(Feed feed) {
+		this.feed = feed;
+	}
+	public News getNews() {
+		return news;
+	}
+	public void setNews(News news) {
+		this.news = news;
+	}
+	
+	
+
+}
